# tungsten-wg

./: .gitignore  Cargo.toml  ICL_MODEL.md  README.md  pretty_density_function.txt
examples/: example.w
src/: config_load.rs  lib.rs  main.rs
src/cuda/: codegen.rs  mod.rs  model.rs  orchestration.rs
src/eval_reference/: mod.rs  noise.rs
src/gpu_eval/: mod.rs  old.rs  vulkano.rs
src/orchestrate/: dot.rs  mod.rs  model.rs  transform.rs
src/parse/: density.rs  dot.rs  mod.rs  model.rs  pretty.rs  spline.rs
src/rcl/: codegen.rs  mod.rs  model.rs
src/rcl/tests/: examples.rs
src/spmt/: dag.rs  mod.rs  model.rs  pretty.rs
src/tape/: lower.rs  mod.rs
src/transform_cuda/: expression.rs  function.rs  mod.rs  statement.rs  types.rs
src/transform_naga/: expression.rs  extern_functions.rs  function copy.rs  function.rs  mod.rs  statement.rs  types.rs
src/transform_naga/helpers/: helpers.wgsl
src/transform_orchestration_cuda/: builders.rs  mod.rs
src/transform_orchestration_gpu/: builders.rs  mod.rs  output.rs  random.rs
src/transform_orchestration_rcl/: builders.rs  mod.rs  output.rs
src/transform_rcl/: expression.rs  function.rs  mod.rs  statement.rs  types.rs
src/transform_spmt/: density.rs  mod.rs  noise.rs  spline.rs
src/transform_spmt/spline/: mod.rs  old.rs  spline_new.rs  splinetrees_wrong.rs
src/tungsten_parse/: mod.rs  test.w  tungsten.pest
testmod/: whatchanged.md
testmod/data/minecraft/worldgen/density_function/: entrances_test.json  factor_test copy.json  final_density.json  final_density_test1.json  final_density_test2.json  final_density_test3.json  final_density_test4.json  interpolate_test.json  interpolated_base_3d_noise.json  shift_x.json  (+4 more)
(+24 files in other folders)
