[package]
name = "tungsten-wg"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = "3.19.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }
pest = "2.8.4"
pest_derive = "2.8.4"
md5 = "0.8.0"
naga = { version = "29.0.0", features = ["wgsl-out", "wgsl-in"] }
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0.40"