[package]
name = "tungsten-wg"
version = "0.1.0"
edition = "2024"
description = "A compiler / code generator for world generation (Rust and CUDA)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/NiekAukes/tungsten-wg"
readme = "README.md"
keywords = ["minecraft", "worldgen", "compiler", "cuda", "codegen"]
categories = ["compilers"]
exclude = [
    ".git/",
    ".github/",

    "tests/data/"
]

[features]
default = []

[dependencies]
bumpalo = "3.19.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
md5 = "0.8.0"
thiserror = "1.0.40"

pollster = "0.3" 
bytemuck = { version = "1.15", features = ["derive"] }

[lib]
name = "tungsten_wg"
path = "src/lib.rs"